--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "file-saver": "^1.3.2",
     "install": "^0.13.0",
     "jszip": "^3.5.0",
+    "ngx-dropzone": "^2.2.2",
     "npm": "^6.14.5",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
