--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
     "file-saver": "^1.3.2",
+    "google-translate-api": "^2.3.0",
     "install": "^0.13.0",
     "jszip": "^3.5.0",
     "ngx-dropzone": "^2.2.2",
