--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
-  "name": "IN18",
+  "name": "in18",
+  "main": "electron/main.js",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Landry and Deackor",
   "homepage": "https://ionicframework.com/",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
+    "serve": "ng serve",
     "build": "ng build",
+    "prod": "ng build -prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start": "electron .",
+    "electron": "ng build --prod && electron .",
+    "mac-release": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=src/assets/icon.icns --prune=true --out=release-builds",
+    "windows-release": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=src/assets/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName='Electron Tutorial App'",
+    "linux-release": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=src/assets/icon.png --prune=true --out=release-builds",
+    "mac-build": "electron-installer-dmg ./release-builds/ionic-desktop-darwin-x64/ionic-desktop.app builds/ionic-desktop",
+    "windows-build": "node src/windows-build.js"
   },
   "private": true,
   "dependencies": {
+    "electron-installer-dmg": "^3.0.0",
     "@angular/common": "~9.1.6",
     "@angular/core": "~9.1.6",
     "@angular/forms": "~9.1.6",
@@ -27,11 +36,12 @@
     "@ionic/angular": "^5.0.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
-    "file-saver": "^1.3.2",
-    "google-translate-api": "^2.3.0",
+    "file-saver": "^1.3.8",
+    "in18": "file:electron",
     "install": "^0.13.0",
     "jszip": "^3.5.0",
     "ngx-dropzone": "^2.2.2",
+    "ngx-electron": "^2.2.0",
     "npm": "^6.14.5",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
@@ -44,10 +54,11 @@
     "@angular/compiler-cli": "~9.1.6",
     "@angular/language-service": "~9.1.6",
     "@ionic/angular-toolkit": "^2.1.1",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "electron-packager": "^15.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
@@ -60,7 +71,7 @@
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
   },
-  "description": "An Ionic project",
+  "description": "A i18n translator",
   "cordova": {
     "plugins": {
       "cordova-plugin-file": {},
