--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/service-worker": "~9.1.6",
-    "electron-installer-dmg": "^3.0.0",
-    "@angular/common": "~9.1.6",
-    "@angular/core": "~9.1.6",
-    "@angular/forms": "~9.1.6",
-    "@angular/platform-browser": "~9.1.6",
-    "@angular/platform-browser-dynamic": "~9.1.6",
-    "@angular/router": "~9.1.6",
+    "@angular/common": "~10.0.3",
+    "@angular/core": "~10.0.3",
+    "@angular/forms": "~10.0.3",
+    "@angular/platform-browser": "~10.0.3",
+    "@angular/platform-browser-dynamic": "~10.0.3",
+    "@angular/router": "~10.0.3",
+    "@angular/service-worker": "~10.0.3",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/file": "^5.27.0",
     "@ionic-native/file-transfer": "^5.27.0",
@@ -37,6 +36,8 @@
     "@ionic/angular": "^5.0.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
+    "electron": "^9.1.0",
+    "electron-installer-dmg": "^3.0.0",
     "file-saver": "^1.3.8",
     "in18": "file:electron",
     "install": "^0.13.0",
@@ -49,11 +50,11 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.5",
-    "@angular/cli": "~9.1.5",
-    "@angular/compiler": "~9.1.6",
-    "@angular/compiler-cli": "~9.1.6",
-    "@angular/language-service": "~9.1.6",
+    "@angular-devkit/build-angular": "~0.1000.2",
+    "@angular/cli": "~10.0.2",
+    "@angular/compiler": "~10.0.3",
+    "@angular/compiler-cli": "~10.0.3",
+    "@angular/language-service": "~10.0.3",
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
@@ -70,7 +71,7 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "~3.9.6"
   },
   "description": "A i18n translator",
   "cordova": {
