--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "in18",
-  "main": "electron/main.js",
+  "main": "src/electron-starter.js",
   "version": "0.0.1",
   "author": "Landry and Deackor",
   "homepage": "https://ionicframework.com/",
@@ -33,18 +33,16 @@
     "@ionic-native/file-transfer": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.0.0",
+    "@ionic/angular": "^5.2.3",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
-    "electron": "^9.1.0",
-    "electron-installer-dmg": "^3.0.0",
     "file-saver": "^1.3.8",
     "in18": "file:electron",
     "install": "^0.13.0",
     "jszip": "^3.5.0",
     "ngx-dropzone": "^2.2.2",
     "ngx-electron": "^2.2.0",
-    "npm": "^6.14.5",
+    "npm": "^6.14.6",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -58,8 +56,10 @@
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.50",
     "codelyzer": "^5.1.2",
+    "electron": "^9.1.0",
+    "electron-installer-dmg": "^3.0.0",
     "electron-packager": "^15.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -68,7 +68,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.6"
