--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "in18",
-  "main": "src/electron-starter.js",
+  "main": "electron/index.js",
   "version": "0.0.1",
   "author": "Landry and Deackor",
   "homepage": "https://ionicframework.com/",
@@ -17,7 +17,8 @@
     "windows-release": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=src/assets/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName='Electron Tutorial App'",
     "linux-release": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=src/assets/icon.png --prune=true --out=release-builds",
     "mac-build": "electron-installer-dmg ./release-builds/ionic-desktop-darwin-x64/ionic-desktop.app builds/ionic-desktop",
-    "windows-build": "node src/windows-build.js"
+    "windows-build": "node src/windows-build.js",
+    "electron:win": "electron-packager ./electron IN18 --overwrite --asar=true --platform=win32 --arch=ia32 --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName='IN18'"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +29,7 @@
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
     "@angular/service-worker": "~10.0.3",
+    "@capacitor/core": "2.2.1",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/file": "^5.27.0",
     "@ionic-native/file-transfer": "^5.27.0",
@@ -53,6 +55,7 @@
     "@angular/compiler": "~10.0.3",
     "@angular/compiler-cli": "~10.0.3",
     "@angular/language-service": "~10.0.3",
+    "@capacitor/cli": "2.2.1",
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
