--- a/package.json
+++ b/package.json
@@ -22,46 +22,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~10.0.3",
-    "@angular/core": "~10.0.3",
-    "@angular/forms": "~10.0.3",
-    "@angular/platform-browser": "~10.0.3",
-    "@angular/platform-browser-dynamic": "~10.0.3",
-    "@angular/router": "~10.0.3",
-    "@angular/service-worker": "~10.0.3",
+    "@angular/common": "^10.0.6",
+    "@angular/core": "^10.0.6",
+    "@angular/forms": "^10.0.6",
+    "@angular/platform-browser": "^10.0.6",
+    "@angular/platform-browser-dynamic": "^10.0.6",
+    "@angular/router": "^10.0.6",
+    "@angular/service-worker": "^10.0.6",
     "@capacitor/core": "2.2.1",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/file": "^5.27.0",
     "@ionic-native/file-transfer": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.2.3",
+    "@ionic/angular": "^5.3.1",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
+    "electron-is-dev": "^1.2.0",
     "file-saver": "^1.3.8",
     "in18": "file:electron",
     "install": "^0.13.0",
     "jszip": "^3.5.0",
     "ngx-dropzone": "^2.2.2",
     "ngx-electron": "^2.2.0",
-    "npm": "^6.14.6",
+    "npm": "^6.14.7",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.2",
-    "@angular/cli": "~10.0.2",
-    "@angular/compiler": "~10.0.3",
-    "@angular/compiler-cli": "~10.0.3",
-    "@angular/language-service": "~10.0.3",
+    "@angular-devkit/build-angular": "^0.1000.4",
+    "@angular/cli": "^10.0.4",
+    "@angular/compiler": "^10.0.6",
+    "@angular/compiler-cli": "^10.0.6",
+    "@angular/language-service": "^10.0.6",
     "@capacitor/cli": "2.2.1",
-    "@ionic/angular-toolkit": "^2.1.1",
+    "@ionic/angular-toolkit": "^2.3.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.50",
+    "@types/node": "^12.12.53",
     "codelyzer": "^5.1.2",
-    "electron": "^9.1.0",
+    "electron": "^9.1.2",
     "electron-installer-dmg": "^3.0.0",
     "electron-packager": "^15.0.0",
     "jasmine-core": "~3.5.0",
@@ -74,7 +75,7 @@
     "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.6"
+    "typescript": "^3.9.7"
   },
   "description": "A i18n translator",
   "cordova": {
