--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.3.1",
+    "capacitor": "^0.5.5",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
     "electron-is-dev": "^1.2.0",
