--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   "private": true,
   "dependencies": {
     "@angular/common": "^10.0.6",
-    "@angular/core": "^10.0.6",
-    "@angular/forms": "^10.0.6",
-    "@angular/platform-browser": "^10.0.6",
-    "@angular/platform-browser-dynamic": "^10.0.6",
-    "@angular/router": "^10.0.6",
-    "@angular/service-worker": "^10.0.6",
+    "@angular/core": "^10.0.7",
+    "@angular/forms": "^10.0.7",
+    "@angular/platform-browser": "^10.0.7",
+    "@angular/platform-browser-dynamic": "^10.0.7",
+    "@angular/router": "^10.0.7",
+    "@angular/service-worker": "^10.0.7",
     "@capacitor/core": "2.2.1",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/file": "^5.27.0",
@@ -39,6 +39,7 @@
     "capacitor": "^0.5.5",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
+    "electron-bridge": "^0.1.1",
     "electron-is-dev": "^1.2.0",
     "file-saver": "^1.3.8",
     "in18": "file:electron",
@@ -52,11 +53,11 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.4",
-    "@angular/cli": "^10.0.4",
-    "@angular/compiler": "^10.0.6",
-    "@angular/compiler-cli": "^10.0.6",
-    "@angular/language-service": "^10.0.6",
+    "@angular-devkit/build-angular": "^0.1000.5",
+    "@angular/cli": "^10.0.5",
+    "@angular/compiler": "^10.0.7",
+    "@angular/compiler-cli": "^10.0.7",
+    "@angular/language-service": "^10.0.7",
     "@capacitor/cli": "2.2.1",
     "@ionic/angular-toolkit": "^2.3.0",
     "@types/jasmine": "~3.5.0",
@@ -75,7 +76,7 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "^3.9.7"
   },
   "description": "A i18n translator",
