--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@angular/platform-browser-dynamic": "^10.0.7",
     "@angular/router": "^10.0.7",
     "@angular/service-worker": "^10.0.7",
-    "@capacitor/core": "2.2.1",
+    "@capacitor/core": "^2.2.1",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/file": "^5.27.0",
     "@ionic-native/file-transfer": "^5.27.0",
@@ -58,7 +58,7 @@
     "@angular/compiler": "^10.0.7",
     "@angular/compiler-cli": "^10.0.7",
     "@angular/language-service": "^10.0.7",
-    "@capacitor/cli": "2.2.1",
+    "@capacitor/cli": "^2.2.1",
     "@ionic/angular-toolkit": "^2.3.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
