--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "^10.0.7",
     "@angular/service-worker": "^10.0.7",
     "@capacitor/core": "^2.2.1",
+    "@capacitor/electron": "^2.4.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/file": "^5.27.0",
     "@ionic-native/file-transfer": "^5.27.0",
@@ -39,7 +40,6 @@
     "capacitor": "^0.5.5",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
-    "electron-bridge": "^0.1.1",
     "electron-is-dev": "^1.2.0",
     "file-saver": "^1.3.8",
     "in18": "file:electron",
@@ -63,8 +63,10 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.53",
+    "IN18": "file:electron",
     "codelyzer": "^5.1.2",
     "electron": "^9.1.2",
+    "electron-bridge": "^0.1.1",
     "electron-installer-dmg": "^3.0.0",
     "electron-packager": "^15.0.0",
     "jasmine-core": "~3.5.0",
