--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "experimentalDecorators":true,
   "compileOnSave": false,
   "compilerOptions": {
+    "emitDecoratorMetadata": true,
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
