--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^10.0.6",
-    "@angular/core": "^10.0.7",
-    "@angular/forms": "^10.0.7",
-    "@angular/platform-browser": "^10.0.7",
-    "@angular/platform-browser-dynamic": "^10.0.7",
-    "@angular/router": "^10.0.7",
-    "@angular/service-worker": "^10.0.7",
-    "@capacitor/core": "^2.2.1",
+    "@angular/common": "^10.0.8",
+    "@angular/core": "^10.0.8",
+    "@angular/forms": "^10.0.8",
+    "@angular/platform-browser": "^10.0.8",
+    "@angular/platform-browser-dynamic": "^10.0.8",
+    "@angular/router": "^10.0.8",
+    "@angular/service-worker": "^10.0.8",
+    "@capacitor-community/electron": "^1.2.3",
+    "@capacitor/core": "^2.4.0",
     "@capacitor/electron": "^2.4.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/file": "^5.27.0",
@@ -40,6 +41,7 @@
     "capacitor": "^0.5.5",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
+    "electron": "^9.1.2",
     "electron-is-dev": "^1.2.0",
     "file-saver": "^1.3.8",
     "in18": "file:electron",
@@ -55,17 +57,19 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1000.5",
     "@angular/cli": "^10.0.5",
-    "@angular/compiler": "^10.0.7",
-    "@angular/compiler-cli": "^10.0.7",
-    "@angular/language-service": "^10.0.7",
-    "@capacitor/cli": "^2.2.1",
+    "@angular/compiler": "^10.0.8",
+    "@angular/compiler-cli": "^10.0.8",
+    "@angular/language-service": "^10.0.8",
+    "@capacitor/cli": "^2.4.0",
     "@ionic/angular-toolkit": "^2.3.0",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.53",
+    "@types/node": "^12.12.54",
     "IN18": "file:electron",
+    "@capacitor-community/electron": "^1.2.3",
     "codelyzer": "^5.1.2",
     "electron": "^9.1.2",
+    "electron-is-dev": "^1.2.0",
     "electron-bridge": "^0.1.1",
     "electron-installer-dmg": "^3.0.0",
     "electron-packager": "^15.0.0",
