--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "in18",
   "main": "electron/index.js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "Landry and Deackor",
   "homepage": "https://ionicframework.com/",
   "scripts": {
@@ -18,7 +18,10 @@
     "linux-release": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=src/assets/icon.png --prune=true --out=release-builds",
     "mac-build": "electron-installer-dmg ./release-builds/ionic-desktop-darwin-x64/ionic-desktop.app builds/ionic-desktop",
     "windows-build": "node src/windows-build.js",
-    "electron:win": "electron-packager ./electron IN18 --overwrite --asar=true --platform=win32 --arch=ia32 --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName='IN18' --icon=./electron/icon/favicon_invert.ico"
+    "electron:win": "electron-packager ./electron IN18 --overwrite --asar=true --platform=win32 --arch=ia32 --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName='IN18' --icon=./electron/icon/favicon_invert.ico",
+    "electron:linux": "electron-packager ./electron IN18 --overwrite --asar=true --platform=linux --arch=x64 --icon=./electron/icon/favicon_invert.png --prune=true --out=release-builds",
+    "electron:mac": "electron-packager ./electron IN18 --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds --icon=./electron/icon/favicon_invert.icns"
+
   },
   "private": true,
   "dependencies": {
