fix csv export and export modal

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "start": "electron .",
-    "electron": "ng build --prod && electron .",
+    "electron": "ionic build && ionic cap copy && electron .",
     "mac-release": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=src/assets/icon.icns --prune=true --out=release-builds",
     "windows-release": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=src/assets/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName='Electron Tutorial App'",
     "linux-release": "electron-packager . electron-tutorial-app --overwrite --asar=true --platform=linux --arch=x64 --icon=src/assets/icon.png --prune=true --out=release-builds",
@@ -72,7 +72,7 @@
     "electron-bridge": "^0.1.1",
     "electron-installer-dmg": "^3.0.0",
     "electron-is-dev": "^1.2.0",
-    "electron-packager": "^15.0.0",
+    "electron-packager": "^15.2.0",
     "IN18": "file:electron",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
