--- a/electron/package.json
+++ b/electron/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@capacitor/electron": "^2.4.0",
+    "electron-bridge": "^0.1.1",
     "electron-is-dev": "^1.2.0"
   },
   "devDependencies": {
