--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "in18",
   "main": "electron/index.js",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "author": "Landry and Deackor",
-  "homepage": "https://ionicframework.com/",
+  "homepage": "https://deakcor.itch.io/in18",
   "scripts": {
     "serve": "ng serve",
     "build": "ionic build --prod --release",
@@ -24,67 +24,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^10.0.8",
-    "@angular/core": "^10.0.8",
-    "@angular/forms": "^10.0.8",
-    "@angular/platform-browser": "^10.0.8",
-    "@angular/platform-browser-dynamic": "^10.0.8",
-    "@angular/router": "^10.0.8",
-    "@angular/service-worker": "^10.0.8",
-    "@capacitor-community/electron": "^1.2.3",
-    "@capacitor/core": "^2.4.0",
-    "@capacitor/electron": "^2.4.0",
-    "@ionic-native/core": "^5.0.7",
-    "@ionic-native/file": "^5.27.0",
-    "@ionic-native/file-transfer": "^5.27.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.3.1",
-    "capacitor": "^0.5.5",
-    "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-file-transfer": "^1.7.1",
-    "electron": "^9.1.2",
-    "electron-is-dev": "^1.2.0",
-    "file-saver": "^1.3.8",
-    "in18": "file:electron",
-    "install": "^0.13.0",
-    "jszip": "^3.5.0",
-    "ngx-dropzone": "^2.2.2",
+    "@angular/common": "^12.2.0",
+    "@angular/core": "^12.2.0",
+    "@angular/forms": "^12.2.0",
+    "@angular/platform-browser": "^12.2.0",
+    "@angular/platform-browser-dynamic": "^12.2.0",
+    "@angular/router": "^12.2.0",
+    "@angular/service-worker": "^12.2.0",
+    "@capacitor-community/electron": "^1.4.2",
+    "@capacitor/core": "^3.1.2",
+    "@capacitor/electron": "^2.4.8",
+    "@ionic-native/core": "^5.35.0",
+    "@ionic-native/file": "^5.35.0",
+    "@ionic-native/file-transfer": "^5.35.0",
+    "@ionic-native/splash-screen": "^5.35.0",
+    "@ionic-native/status-bar": "^5.35.0",
+    "@ionic/angular": "^5.6.13",
+    "electron": "^11.0.5",
+    "file-saver": "^2.0.5",
+    "ionic-angular": "^3.9.10",
+    "jszip": "^3.7.1",
+    "ngx-dropzone": "^3.0.0",
     "ngx-electron": "^2.2.0",
-    "npm": "^6.14.7",
-    "rxjs": "~6.5.1",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "rxjs": "^6.5.0",
+    "tslib": "^2.3.0",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.5",
-    "@angular/cli": "10.2.1",
-    "@angular/compiler": "^10.0.8",
-    "@angular/compiler-cli": "^10.0.8",
-    "@angular/language-service": "^10.0.8",
-    "@capacitor/cli": "^2.4.0",
-    "@ionic/angular-toolkit": "^2.3.0",
-    "@types/jasmine": "^3.5.12",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.54",
-    "codelyzer": "^5.1.2",
-    "electron": "^9.1.2",
-    "electron-bridge": "^0.1.1",
+    "@angular-devkit/build-angular": "^12.2.0",
+    "@angular/cli": "12.2.0",
+    "@angular/compiler": "^12.2.0",
+    "@angular/compiler-cli": "^12.2.0",
+    "@angular/language-service": "^12.2.0",
+    "@capacitor/cli": "^3.1.2",
+    "@capacitor/core": "^3.1.2",
+    "@ionic/angular-toolkit": "^4.0.0",
+    "@types/jasmine": "^3.8.2",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "^16.4.12",
+    "codelyzer": "^6.0.2",
+    "electron": "^11.0.5",
     "electron-installer-dmg": "^3.0.0",
-    "electron-is-dev": "^1.2.0",
-    "electron-packager": "^15.2.0",
-    "IN18": "file:electron",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~5.0.0",
+    "electron-packager": "^15.3.0",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "^7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "~10.1.0",
     "tslint": "^6.1.3",
-    "typescript": "^3.9.7"
+    "typescript": "^4.3.5"
   },
   "description": "A i18n translator",
   "cordova": {
