--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "capacitor": "^0.5.5",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
+    "deepl": "^1.0.13",
     "electron": "^11.5.0",
     "electron-is-dev": "^1.2.0",
     "file-saver": "^1.3.8",
@@ -62,13 +63,13 @@
     "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.54",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "electron": "^11.5.0",
     "electron-bridge": "^0.1.1",
     "electron-installer-dmg": "^3.0.0",
     "electron-is-dev": "^1.2.0",
     "electron-packager": "^15.2.0",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~6.3.14",
     "karma-chrome-launcher": "~3.1.0",
