--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "file-saver": "^1.3.8",
     "install": "^0.13.0",
     "jszip": "^3.5.0",
+    "ngx-clipboard": "^14.0.2",
     "ngx-dropzone": "^2.2.2",
     "ngx-electron": "^2.2.0",
     "npm": "^6.14.7",
